<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#2f3887">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#fff"
            android:focusedByDefault="false"
            android:foregroundTint="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/editTextRePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#fff"
            android:focusedByDefault="false"
            android:foregroundTint="#fff"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#fff"
            android:foregroundTint="#fff"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#fff"
            android:focusedByDefault="false"
            android:foregroundTint="#fff"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/editTextNationalId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#fff"
            android:focusedByDefault="false"
            android:foregroundTint="#fff"
            android:hint="@string/national_id"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@color/backgroundcolor"
            android:fontFamily="sans-serif"
            android:text="Register"
            android:textColor="#2F3887"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If You Have an Account"
                android:textColor="#f9f7f7" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="Sign In"
                android:textColor="#fab333"
                android:textSize="16dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>